--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,14 +1,82 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<!--
+  ~ Copyright (c) 2015 Loop Labs, Inc. All rights reserved.
+  -->
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/main_screen_background"
+    android:orientation="vertical"
     tools:context="com.getnotion.android.bridgeprovisioner.activities.LoginActivity">
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/mainScreenNotionLogo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="42dp"
+            android:contentDescription="@string/welcome.notionLogo"
+            android:src="@drawable/notion_logo_white">
+        </ImageView>
+
+
+        <TextView
+            android:id="@+id/mainScreenWelcomeTextView"
+            style="@style/WelcomeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="54dp"
+            android:lines="3"
+            android:text="@string/welcome.welcomeText">
+        </TextView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/buildVersionTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="3dp"
+            android:layout_marginEnd="3dp"
+            android:gravity="end"
+            android:textColor="@color/notion_white"
+            android:textSize="12sp">
+        </TextView>
+
+        <Button
+            android:id="@+id/mainScreenSetupButton"
+            style="@style/FooterButton.DarkTeal"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:text="@string/welcome.createAccount">
+        </Button>
+
+        <Button
+            android:id="@+id/mainScreenLoginButton"
+            style="@style/FooterButton.White"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:text="@string/welcome.login">
+        </Button>
+
+    </LinearLayout>
+    
+</LinearLayout>
